# ECG_INSIGHT

./: .dockerignore  .env.development  .env.example  .env.production  .env.production.example  .env.staging  .gitignore  AI_ENGINE_IMPLEMENTATION_REPORT.md  API_CONFIGURATION_FIX_REPORT.md  APP_HEALTH_AUDIT_REPORT.md  AUTH_FAILED_TO_FETCH_FIX_REPORT.md  BLANK_SCREEN_ROOT_CAUSE_REPORT.md  BOLT_UI_AUDIT.md  BOLT_UI_INTEGRATION_REPORT.md  BOLT_UI_MIGRATION_REPORT.md  CLINICAL_WORKFLOW_REPORT.md  COPILOT_INITIALIZATION_FIX_REPORT.md  DASHBOARD_ENHANCEMENT_REPORT.md  DASHBOARD_RESTORATION_REPORT.md  Dockerfile  Dockerfile.backend.production  Dockerfile.frontend.production  Dockerfile.production  ECG_AI_TRAINING_PIPELINE_REPORT.md  ECG_CASE_MODULE_REPORT.md  ECG_CLINICAL_VALIDATION_REPORT.md  ECG_DIGITIZATION_ENGINE_REPORT.md  ECG_END_TO_END_VALIDATION_REPORT.md  ECG_EXPLAINABILITY_ENGINE_REPORT.md  ECG_IMAGE_ANALYSIS_PIPELINE_REPORT.md  ECG_MEDICAL_REPORT_SYSTEM_REPORT.md  ECG_PRO_VIEWER_IMPLEMENTATION_REPORT.md  ECG_PRO_VIEWER_REPORT.md  ECG_REAL_AI_ARCHITECTURE_REPORT.md  ENTERPRISE_CLINICAL_DASHBOARD_REPORT.md  ENTERPRISE_DASHBOARD_UPGRADE_REPORT.md  ENTERPRISE_QA_AUTOMATION_REPORT.md  ENTERPRISE_UI_REBUILD_REPORT.md  FINAL_ENTERPRISE_DASHBOARD_REPORT.md  FIRST_REAL_ECG_MODEL_REPORT.md  (+53 more)
ai-engine/: Dockerfile.production  README.md  pyproject.toml
ai-engine/app/: __init__.py  main.py  schemas.py
ai-engine/datasets/: __init__.py  base.py  mit_bih.py  physionet.py  ptb_xl.py
ai-engine/inference/: __init__.py  wrapper.py
ai-engine/models/: __init__.py  cnn.py  (+1 more)
(+511 files in other folders)
