[project]
name = "ecg-insight-ai-engine"
version = "0.1.0"
description = "Standalone ECG Insight AI Engine scaffold for future validated ECG inference."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi>=0.115.0",
  "numpy>=2.0.0",
  "onnxruntime>=1.18.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-multipart>=0.0.9",
  "tensorboard>=2.18.0",
  "torch>=2.4.0",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
